8.51
Mac full screen hacks.